mobile menu modified, added some animations to mobile menu, resolved body overflow-y bug in main page

--- a/src/App.scss
+++ b/src/App.scss
@@ -7,6 +7,7 @@
 .App {
   text-align: center;
   font-family: "Samim", sans-serif;
+  overflow-y: hidden;
 }
 
 .App-logo {
