--- a/src/assets/styles/Nav.scss
+++ b/src/assets/styles/Nav.scss
@@ -79,49 +79,51 @@
   top: 8px;
 }
 .mobile-menu-wrapper {
-  transition: left 3s;
-  display: none;
+  display: flex;
   position: fixed;
   height: 100%;
   width: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
+  bottom: 100%;
+  background-color: rgba(0, 0, 0, 0.95);
   z-index: 6;
+  opacity: 0;
+  transition: all 0.5s ease-in;
+  -moz-transition: all 0.5s ease-in;
+  -webkit-transition: all 0.5s ease-in;
+  -o-transition: all 0.5s ease-in;
   .container {
     padding-top: 20px;
     position: absolute;
-    width: 70%;
+    width: 100%;
     height: 100%;
-    background-color: whitesmoke;
-    color: black;
+    color: white;
     display: flex;
     flex-direction: column;
     align-content: center;
     align-items: center;
-    left: 100%;
-    transition: all 1s ease-in-out;
+
     .close-icon-box {
       width: 100%;
     }
     .close-icon {
-      float: left;
-      font-size: 22px;
+      float: right;
+      font-size: 32px;
+      margin: 8px 5px;
     }
     .items-container {
       align-content: center;
       align-items: center;
       list-style: none;
-      padding: 30px 0 0;
+      padding: 80px 0 0;
       width: 100%;
-      text-align: right;
-      color: black;
-      font-size: 16px;
+      text-align: center;
+      color: white;
+      font-size: 23px;
       & > li {
-        border-top: 1px solid lightgrey;
-        &:last-child {
-          border-bottom: 1px solid lightgrey;
-        }
+        margin-top: 15px;
         a {
-          color: rgb(50, 50, 50);
+          color: white;
+          text-align: center;
         }
       }
     }
@@ -168,10 +170,8 @@
 
   .mobile-menu-wrapper {
     &.open {
-      display: flex;
-      .container {
-        left: 30%;
-      }
+      bottom: 0;
+      opacity: 1;
     }
   }
 }
